packages/forge-dsl/fixtures/errors/e08-content-after-divert.fable
// expect: FORGE304
-> way

=== way ===
You set off at dawn.
-> camp
This line can never be read.

=== camp ===
The fire is warm.
-> END
